<resources>
    <string name="app_name">Jobs4SMCYouth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_job_post">Job Listings</string>
    <string name="nav_scholarships">Scholarships</string>
    <string name="nav_volunteer">Volunteer Opportunities</string>
    <string name="nav_transportation">Transportation</string>
    <string name="nav_requirements">Requirements</string>
    <string name="nav_success_stories">Success Stories</string>
    <string name="nav_about">About</string>
    <string name="nav_print">Print</string>
    <string name="nav_job_prep">Job Prep</string>
    <string name="nav_applications">Applications</string>
    <string name="nav_interview">Interview Tips</string>
    <string name="nav_resume_cover_letters">Resumes and Cover Letters</string>
    <string name="nav_job_search_sites">Job Search Websites</string>
    <string name="nav_tips">Tips</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_j4y">Jobs for Youth is a year-round program designed to help young people who live in San Mateo County develop their job search skills. The program provides employment services to all youth between the ages of 14-21 years old at no cost to them or to employers. There are no eligibility requirements to join this program. Services are available to all youth regardless of socio-economic or risk level.</string>
    <string name="about_services">Job placement assistance (job referrals)\n\n One-on-one job counseling \n\n Job preparation workshops that cover: 1.) mastering job application forms; 2.) interviewing skills; 3.) resume writing assistance; and 4.) job search websites for teens \n\n All interested youth must contact their nearest Jobs for Youth office to sign up and attend a job preparation workshop. Jobs for Youth staff can also provide presentations/job preparation workshops at the local high schools. If interested, please contact your nearest location and speak to a Jobs for Youth Specialist.</string>
    <string name="interview_during">\u2022 Smile and Introduce yourself.\n\n\u2022 Give the employer a firm handshake at the beginning of the interview.\n\n\u2022 Make eye contact and have good posture.\n\n\u2022 Only say good things to the employer (even if you hated your first job).\n\n\u2022 Answer questions with examples. Refer to a story to show the example.\n\n\u2022 Speak clearly and slowly; speak loud enough to be heard.\n\n\u2022 If you don’t understand a question, ask for clarification.\n\n\u2022 Do not discuss pay (unless they ask).\n\n\u2022 You must ask questions at the end of the interview. A few easy ones are:\nWhat is the schedule for this position? Is it flexible?\nCould you describe a typical day (or week) for this job?\nIs there a dress code?\n\n\u2022 At the end of the interview, give the employer a firm handshake, smile, get a card/contact info, and thank him/her.</string>
    <string name="interview_before">\u2022 Eat something before your interview.\n\n\u2022 Learn about the company you are applying to. A great way to do this is by reviewing the company\'s website.\n\n\u2022 Practice answering interview questions with friends or family.\n\n\u2022 View mock interviews on YouTube or other websites.\n\n\u2022 Review your application and resume.\n\n\u2022 Prepare copies of your resume to give to the interviewer.\n\n\u2022 Do not bring food in the interview room.\n\n\u2022 Do not reschedule the interview, unless an emergency happens.\n\n\u2022 Arrive 10-15 minutes early to your interview. Make sure to give yourself ample time for parking, traffic, public transportation, rides from others, and/or childcare).\n\n\u2022 Call in advance if you will be running late (note that this may hurt your chances of getting the job).</string>
    <string name="interview_after">\u2022 Email the employer a thank you letter right after you interview.\n\n\u2022 Follow up with the employer for the status of your interview. If they have given you a specific date to follow up, contact the employer on that date. If no date was given, rule of thumb is to wait at least 4-5 business days before following up.</string>
    <string-array name="jobTitle">
        <item>Food Pantry Staff</item>
        <item>Cashiers and Cooks</item>
        <item>Helper</item>
        <item>General Labor</item>
        <item>Swim Instructor</item>
        <item>Volunteer/Assistant Activity</item>
        <item>Customer Service/ Clean up</item>
        <item>Customer Service Associate</item>
        <item>Clerical Assistant/Receptionist</item>
        <item>Line Prep</item>
    </string-array>
    <string-array name="city">
        <item>Daly City</item>
        <item>Daly City</item>
        <item>Burlingame</item>
        <item>South San Francisco</item>
        <item>Pacifica</item>
        <item>Daly City</item>
        <item>Pacifica</item>
        <item>Half Moon Bay</item>
        <item>Half Moon Bay</item>
        <item>Pacifica</item>
    </string-array>
    <string-array name="duties">
        <item>Fill all requests for groceries, sort and store donated food items, maintenance of food items.</item>
        <item>N/A</item>
        <item>N/A</item>
        <item>General labor in manufacturing plant.</item>
        <item>N/A</item>
        <item>N/A</item>
        <item>Work at bakery.</item>
        <item>Greet and assist customers, restock, clean and maintain store.</item>
        <item>Receptionist work, comput work ,greeting people, answering phones.</item>
        <item>Customer service, food preparation, cashier, cleaning, restocking, dish-washing, shop.</item>
    </string-array>
    <string-array name="payRate">
        <item>$10/hr</item>
        <item>$10.75/hr</item>
        <item>$12.50/hr</item>
        <item>TBD</item>
        <item>$16/hr</item>
        <item>$11/hr</item>
        <item>$10/hr</item>
        <item>$12/hr</item>
        <item>$10/hr</item>
        <item>$12.25/hr</item>
    </string-array>
    <string-array name="age">
        <item>16+ years old</item>
        <item>18+ years old</item>
        <item>18+ years old</item>
        <item>18+ years old</item>
        <item>17+ years old</item>
        <item>18+ years old</item>
        <item>16+ years old</item>
        <item>17+ years old</item>
        <item>16+ years old</item>
        <item>14+ years old</item>
    </string-array>
    <string name="tip1_title">Take a calendar or notebook with you to work.</string>
    <string name="tip1_detail">Record hard-to-remember information, instructions, and meetings you may have to attend.</string>
    <string name="tip2_title">Ensure transportation to work.</string>
    <string name="tip2_detail">If you have a car, make sure it is dependable to drive. Allow extra driving time. If you depend on someone else for transportation, be sure he/she is always available. However, try to have a “plan b” (i.e. Public transportation). If you are going to be late, call your employer. If taking public transportation, know the bus routes and times.</string>
    <string name="tip3_title">Get plenty of rest for work.</string>
    <string name="tip3_detail">Strain and tension the first few days and weeks of a job will take more energy out of your system than you expect. Avoid a heavy social schedule and get plenty of rest.</string>
    <string name="tip4_title">Ask the right questions.</string>
    <string name="tip4_detail">Try to find your own answer first. Ask questions at appropriate times. Don’t be afraid to ask if you are not sure about something.</string>
    <string name="tip5_title">Use good judgement in working extra hours.</string>
    <string name="tip5_detail">Abide by management’s instructions. Working extra hours and eliminating breaks and lunch to impress management will not develop good relationships with your fellow employees.</string>
    <string name="tip6_title">Do not flaunt your knowledge and education.</string>
    <string name="tip6_detail">Do not try to impress people with what you know. Until you are sure, be safe and do it the way you are instructed.</string>
    <string name="tip7_title">Build a relationship with all employees.</string>
    <string name="tip7_detail">Be cautious in spending too much time with one person, too soon.</string>
    <string name="tip8_title">Stay busy (take initiative).</string>
    <string name="tip8_detail">Try to avoid “just sitting there.” Let the supervisor know when you have completed your work so you can work on new projects.</string>
    <string name="tip9_title">Dress appropriately.</string>
    <string name="tip9_detail">Abide by the dress code.</string>
    <string name="tip10_title">Be familiar with company rules.</string>
    <string name="tip10_detail">Review your employee handbook.</string>
</resources>