<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_job_post_id"
            android:icon="@drawable/icon_jobpost"
            android:title="@string/nav_job_post"/>
        <item
            android:id="@+id/drawer_scholarship_id"
            android:icon="@drawable/icon_scholarship"
            android:title="@string/nav_scholarships"/>
        <item
            android:id="@+id/drawer_transportation_id"
            android:icon="@drawable/icon_transportation"
            android:title="@string/nav_transportation"/>
        <item
            android:id="@+id/drawer_requirements_id"
            android:icon="@drawable/icon_requirements"
            android:title="@string/nav_requirements"/>
        <item
            android:id="@+id/drawer_success_stories_id"
            android:icon="@drawable/icon_successhappy"
            android:title="@string/nav_success_stories"/>
        <item
            android:id="@+id/drawer_about_id"
            android:icon="@drawable/icon_about"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/drawer_print_id"
            android:icon="@drawable/ic_print_black_24dp"
            android:title="@string/nav_print"/>

        <item android:title="@string/nav_job_prep">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/drawer_applications_id"
                        android:icon="@drawable/icon_application"
                        android:title="@string/nav_applications"/>
                    <item
                        android:id="@+id/drawer_interview_id"
                        android:icon="@drawable/icon_interview"
                        android:title="@string/nav_interview"/>
                    <item
                        android:id="@+id/drawer_resume_id"
                        android:icon="@drawable/icon_resume"
                        android:title="@string/nav_resume_cover_letters"/>
                    <item
                        android:id="@+id/drawer_job_site_id"
                        android:icon="@drawable/icon_websites"
                        android:title="@string/nav_job_search_sites"/>
                    <item
                        android:id="@+id/drawer_tips_id"
                        android:icon="@drawable/icon_tips"
                        android:title="@string/nav_tips"/>

                </group>
            </menu>
        </item>
    </group>
</menu>