<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fitsSystemWindows="true"
    android:layout_marginTop="@dimen/nested_scrollview_top_margin"
    tools:context=".Fragments.TipFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule1_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip1_title" />

                <TextView
                    android:id="@+id/tip_rule1_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip1_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule2_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip2_title" />

                <TextView
                    android:id="@+id/tip_rule2_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip2_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule3_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip3_title" />

                <TextView
                    android:id="@+id/tip_rule3_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip3_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule4_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip4_title" />

                <TextView
                    android:id="@+id/tip_rule4_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip4_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule5_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip5_title" />

                <TextView
                    android:id="@+id/tip_rule5_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip5_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule6_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip6_title" />

                <TextView
                    android:id="@+id/tip_rule6_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip6_detail" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule7_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip7_title" />

                <TextView
                    android:id="@+id/tip_rule7_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip7_detail" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule8_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip8_title" />

                <TextView
                    android:id="@+id/tip_rule8_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip8_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule9_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip9_title" />

                <TextView
                    android:id="@+id/tip_rule9_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip9_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/tip_tipCard_rules10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            card_view:cardCornerRadius="@dimen/card_view_corner_radius"
            card_view:cardUseCompatPadding="false"
            android:clickable="true"
            app:cardBackgroundColor="@color/card_view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/standard_linear_layout_padding">

                <TextView
                    android:id="@+id/tip_rule10_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text"
                    android:textColor="@color/card_view_title"
                    android:text="@string/tip10_title" />

                <TextView
                    android:id="@+id/tip_rule10_detail_tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_details_text_expanding_card_view"
                    android:textSize="@dimen/body_text"
                    android:text="@string/tip10_detail" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
